# Fairris

./: Cargo.toml  README.md  build.sh  serve.sh
assets/: index.html  style.css
src/: create_component.rs  details_component.rs  known_data.rs  known_pids.rs  lib.rs  model_impl.rs  pidinfo.rs  pidinfo_component.rs  pidinfo_viewer.rs  pit_service.rs  rest_interface.rs  search_component.rs
src/app_state/: data.rs  data_manager.rs  mod.rs  pid_manager.rs
src/collection_service/: collection.rs  collection_capabilities.rs  collection_properties.rs  member_item.rs  mod.rs
src/data_type_registry/: date_time.rs  digital_object_locations.rs  digital_object_type.rs  etag.rs  kernel_information_profile.rs  locations.rs  macros.rs  mod.rs  policy.rs  profile.rs  type.rs  version.rs
src/details_page/: data_widget.rs  date_created_input.rs  date_modified_input.rs  digital_object_type_selector.rs  edit_button.rs  etag_input.rs  form_switch.rs  helpers.rs  locations_list.rs  mod.rs  policy_input.rs  profile_selector.rs  publish_button.rs  type_selector.rs  version_input.rs
src/details_page/data_widget/: annotated_image_form.rs  collection_form.rs  create_data_form.rs  data_widget.rs  mod.rs
src/service_communication/: datatypes.rs  metadata.rs  mod.rs  pit_record.rs  primitive_types.rs  types.rs
static/: index.html  style.css
