[package]
authors = ["Andreas Pfeil <pfeil@kit.edu>"]
categories = ["FAIR Digital Objects"]
description = "A testbed interface to work with FAIR digital objects."
edition = "2018"
keywords = ["FDO"]
#license = ""
name = "fairris"
readme = "README.md"
#repository = ""
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
