[package]
authors = ["Andreas Pfeil <pfeil@kit.edu>"]
categories = ["gui"]
description = "A testbed interface to work with FAIR digital objects."
edition = "2018"
keywords = ["FDO"]
license = "Apache-2.0"
license-file = "LICENSE"
name = "fairris"
readme = "README.md"
#repository = ""
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
yew-router = "0.14"
anyhow = "1"

serde_json = "1"
serde = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

rand = { version = "0.7", features = ["wasm-bindgen"] }
wee_alloc = "0.4"
enum-iterator = "*"

log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'Window',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'HtmlInputElement',
]