[package]
authors = ["Andreas Pfeil <pfeil@kit.edu>"]
categories = ["gui"]
description = "A testbed interface to work with FAIR digital objects."
edition = "2018"
keywords = ["FDO"]
license = "Apache-2.0"
license-file = "LICENSE"
name = "fairris"
readme = "README.md"
#repository = ""
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
yew-router = "0.14"
anyhow = "1"

serde_json = "1"
serde = "1"
chrono = { version = "*", features = ["serde", "wasmbind"] }

rand = { version = "*", features = ["wasm-bindgen"] }
strum = { version = "0.19", features = ["derive"] }

wee_alloc = "*"
log = "*"
wasm-logger = "*"
console_error_panic_hook = "*"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'Window',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'HtmlInputElement',
]